--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
